--- a/sass/theme.css
+++ b/sass/theme.css
@@ -27,6 +27,7 @@ body {
   width: 100%;
   height: auto;
   margin: 0;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -44,6 +45,7 @@ body {
 #page {
   width: 100%;
   height: auto;
+  margin: 0 auto;
 }
 
 .current-menu-item a {
@@ -54,15 +56,21 @@ body {
 header {
   width: 100%;
   height: 80px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+#header_site_menu {
+  box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.1);
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
-  width: 90%;
+  width: 85%;
+  height: 80px;
   justify-content: space-between;
   align-items: center;
 }
@@ -72,7 +80,7 @@ header {
   height: 14px;
 }
 
-#header-site-menu {
+#header_menu {
   width: 100vw;
   display: flex;
 }
@@ -172,19 +180,19 @@ header {
   #openBtn {
     display: block;
   }
-  #header-site-menu {
+  #header_menu {
     display: none;
   }
-  #header-site-menu.active {
+  #header_menu.active {
     display: block;
   }
   #closeBtn {
     display: none;
   }
-  #header-site-menu.active ~ #closeBtn {
+  #header_menu.active ~ #closeBtn {
     display: block;
   }
-  #header-site-menu.active ~ #openBtn {
+  #header_menu.active ~ #openBtn {
     display: none;
   }
   #menu-header {
@@ -213,7 +221,11 @@ header {
   align-items: center;
   width: 100%;
   height: 40px;
+  margin: 0 auto;
   border-top: 1px black solid;
+}
+.footer_site_menu .menu {
+  box-shadow: none !important;
 }
 
 #menu-footer {
@@ -266,12 +278,14 @@ header {
 }
 /*** BANNER ***/
 .banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 100%;
-  height: 962px;
-  overflow: hidden;
+  height: 160vh;
 }
-.banner .background_img {
+.banner img {
   position: absolute;
   top: 0;
   left: 0;
@@ -350,6 +364,18 @@ header {
     font-size: 28px;
   }
 }
+/*** FRONT-PAGE ***/
+.photos-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1148px;
+  height: auto;
+}
+
 /*** CONTACT MODALE ***/
 .modale-overlay {
   display: none;
@@ -477,9 +503,11 @@ header {
 
 /*** SINGLE-PHOTOS ***/
 .single-photos {
-  width: 100vw;
-  max-width: 1440px;
+  width: 100%;
+  max-width: 1250px;
+  padding: 0 2%;
   margin: 0 auto;
+  position: relative;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -493,7 +521,7 @@ header {
   flex-direction: row;
   justify-content: center;
   gap: 2%;
-  padding-top: 30px;
+  margin-top: 30px;
 }
 .single-photos .single-photos-part-one .photo-meta {
   width: 50%;
@@ -591,8 +619,8 @@ header {
 }
 .single-photos .single-photos-part-two .single-contact-photo .arrows {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-end;
+  width: 6%;
   cursor: pointer;
   padding-top: 10px;
   padding-left: 10px;
@@ -613,7 +641,7 @@ header {
 }
 .single-photos .single-photos-part-three {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1334px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -630,10 +658,16 @@ header {
 .single-photos .single-photos-part-three .photos-apparentees {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  gap: 2%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  top: 50%;
+  left: 0.5%;
   width: 100%;
   height: 500px;
+}
+.single-photos .single-photos-part-three .photos-apparentees #photo-block {
+  width: 49%;
 }
 
 @media (max-width: 1024px) {
@@ -659,6 +693,7 @@ header {
   .single-photos .single-photos-part-one .photo-image img {
     width: 100%;
     height: auto;
+    max-height: 800px;
   }
   .single-photos .single-photos-part-three {
     display: flex;
@@ -673,9 +708,12 @@ header {
   .single-photos .single-photos-part-three .photos-apparentees {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap: 14px;
+    width: 100%;
     height: auto;
-    gap: 20px;
+    left: 0;
   }
 }
 @media (max-width: 375px) {
@@ -711,7 +749,8 @@ header {
 }
 #photo-block #photo-block__img {
   width: 100%;
-  height: 495px;
+  height: 100%;
+  max-height: 495px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -794,12 +833,13 @@ header {
 @media (max-width: 1024px) {
   #photo-block {
     width: 100%;
+    position: none;
     display: flex;
     justify-content: center;
   }
   #photo-block #photo-block__img {
     width: 100%;
-    height: auto;
-    margin: 0 20px;
+    height: 100%;
+    max-height: 280px;
   }
 }/*# sourceMappingURL=theme.css.map */
