--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -44,6 +44,7 @@ body {
     width: 100%;
     height: auto;
     margin: 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -61,6 +62,7 @@ body {
 #page {
     width: 100%;
     height: auto;
+    margin: 0 auto;
 }
 
 .current-menu-item a {
@@ -73,15 +75,21 @@ body {
 header {
     width: 100%;
     height: 80px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+    
+#header_site_menu {
+    box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.1);
 }
 
 .navbar {
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 85%;
+    height: 80px;
     justify-content: space-between;
     align-items: center;
 }
@@ -91,7 +99,7 @@ header {
     height: 14px;
 }
 
-#header-site-menu {
+#header_menu {
     width: 100vw;
     display: flex;
 }
@@ -205,11 +213,11 @@ header {
         display: block;
     }
 
-    #header-site-menu {
+    #header_menu {
         display: none;
     }
 
-    #header-site-menu.active {
+    #header_menu.active {
         display: block;
     }
 
@@ -217,11 +225,11 @@ header {
         display: none;
     }
 
-    #header-site-menu.active ~ #closeBtn {
+    #header_menu.active ~ #closeBtn {
         display: block;
     }
 
-    #header-site-menu.active ~ #openBtn {
+    #header_menu.active ~ #openBtn {
         display: none;
     }
 
@@ -254,7 +262,11 @@ header {
     align-items: center;
     width: 100%;
     height: 40px;
+    margin: 0 auto;
     border-top: 1px black solid;
+    .menu {
+        box-shadow: none !important;
+    }
 }
 
 #menu-footer {
@@ -311,11 +323,13 @@ header {
 
 /*** BANNER ***/
 .banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     width: 100%;
-    height: 962px;
-    overflow: hidden;
-    .background_img {
+    height: 160vh;
+    img {
         position: absolute;
         top: 0;
         left: 0;
@@ -402,6 +416,19 @@ header {
     .banner h1 {
         font-size: 28px;
     }
+}
+
+
+/*** FRONT-PAGE ***/
+.photos-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1148px;
+    height: auto;
 }
 
 
@@ -536,9 +563,11 @@ header {
 
 /*** SINGLE-PHOTOS ***/
 .single-photos {
-    width: 100vw;
-    max-width: 1440px;
+    width: 100%;
+    max-width: 1250px;
+    padding: 0 2%;
     margin: 0 auto;
+    position: relative;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -551,7 +580,7 @@ header {
         flex-direction: row;
         justify-content: center;
         gap: 2%;
-        padding-top: 30px;
+        margin-top: 30px;
             .photo-meta {
                 width: 50%;
                 order: 1;
@@ -645,8 +674,8 @@ header {
             }
             .arrows {
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                justify-content: flex-end;
+                width: 6%;
                 cursor: pointer;
                 padding-top: 10px;
                 padding-left: 10px;
@@ -669,7 +698,7 @@ header {
     }
     .single-photos-part-three {
         width: 100%;
-        max-width: 1440px;
+        max-width: 1334px;
         height: auto;
         display: flex;
         flex-direction: column;
@@ -685,10 +714,16 @@ header {
         .photos-apparentees {
             display: flex;
             flex-direction: row;
-            justify-content: center;
-            gap: 2%;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            position: relative;
+            top: 50%;
+            left: 0.5%;
             width: 100%;
             height: 500px;
+            #photo-block {
+                width: 49%;
+            }
         }
     }
 }
@@ -713,6 +748,7 @@ header {
                     img {
                         width: 100%;
                         height: auto;
+                        max-height: 800px;
                     }
                 }
         }  
@@ -728,9 +764,12 @@ header {
             .photos-apparentees {
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
                 align-items: center;
+                gap: 14px;
+                width: 100%;
                 height: auto;
-                gap: 20px;
+                left: 0;
             }
         }   
     }
@@ -771,7 +810,8 @@ header {
     position: relative;
         #photo-block__img {
         width: 100%;
-        height: 495px;
+        height: 100%;
+        max-height: 495px;
         object-fit: cover;
         }
 }
@@ -857,12 +897,13 @@ header {
 @media (max-width: 1024px) {
     #photo-block {
         width: 100%;
+        position: none;
         display: flex;
         justify-content: center;
             #photo-block__img {
                 width: 100%;
-                height: auto;
-                margin: 0 20px;
+                height: 100%;
+                max-height: 280px;
+                }
             }
     }
-}
