--- a/sass/theme.css
+++ b/sass/theme.css
@@ -56,13 +56,13 @@ body {
 header {
   width: 100%;
   height: 80px;
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #header_site_menu {
+  width: 100%;
   box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -416,7 +416,8 @@ header {
   transition: all 0.4s ease;
 }
 .modale-overlay .modale-global .modale-header .img_contact_modale {
-  height: 106px;
+  max-height: 106px;
+  height: 100%;
   width: 100%;
   padding-top: 12px;
 }
@@ -505,7 +506,7 @@ header {
 .single-photos {
   width: 100%;
   max-width: 1250px;
-  padding: 0 2%;
+  padding: 0 4%;
   margin: 0 auto;
   position: relative;
   height: auto;
@@ -840,6 +841,11 @@ header {
   #photo-block #photo-block__img {
     width: 100%;
     height: 100%;
-    max-height: 280px;
+    max-height: 400px;
+  }
+  #photo-block #photo-block-survol {
+    width: 100%;
+    height: 100%;
+    max-height: 400px;
   }
 }/*# sourceMappingURL=theme.css.map */
