--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -75,13 +75,13 @@ body {
 header {
     width: 100%;
     height: 80px;
-    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
 }
     
 #header_site_menu {
+    width: 100%;
     box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -254,7 +254,6 @@ header {
 }
 
 /*** FOOTER ***/
-
 .footer_site_menu {
     display: flex;
     flex-direction: row;
@@ -469,7 +468,8 @@ header {
                 transition:all 0.4s ease;
             }
             .img_contact_modale {
-                height: 106px;
+                max-height: 106px;
+                height: 100%;
                 width: 100%;
                 padding-top: 12px;
             }
@@ -565,7 +565,7 @@ header {
 .single-photos {
     width: 100%;
     max-width: 1250px;
-    padding: 0 2%;
+    padding: 0 4%;
     margin: 0 auto;
     position: relative;
     height: auto;
@@ -903,7 +903,15 @@ header {
             #photo-block__img {
                 width: 100%;
                 height: 100%;
-                max-height: 280px;
-                }
+                max-height: 400px;
             }
     }
+    
+    #photo-block {
+        #photo-block-survol {
+            width: 100%;
+            height: 100%;
+            max-height: 400px;
+        }
+    }
+}
