--- a/sass/theme.css
+++ b/sass/theme.css
@@ -283,7 +283,7 @@ header {
   align-items: center;
   position: relative;
   width: 100%;
-  height: 160vh;
+  height: 140vh;
 }
 .banner img {
   position: absolute;
@@ -365,15 +365,44 @@ header {
   }
 }
 /*** FRONT-PAGE ***/
-.photos-gallery {
+.section-gallery {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+  margin-bottom: 90px;
+}
+.section-gallery .photos-gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.section-gallery .load_more {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  max-width: 1148px;
-  height: auto;
+  padding: 8px 15px;
+  position: absolute;
+  width: 272px;
+  height: 50px;
+  left: 614px;
+  top: 3104px;
+  background: #D8D8D8;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
+  border-radius: 2px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 0.3s, color 0.3s;
+}
+.section-gallery .load_more:hover {
+  background-color: #000000;
+  color: white;
 }
 
 /*** CONTACT MODALE ***/
@@ -660,7 +689,6 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-wrap: wrap;
   position: relative;
   top: 50%;
   left: 0.5%;
@@ -745,8 +773,9 @@ header {
 }
 /*** TEMPLATE PHOTO_BLOCK ***/
 #photo-block {
-  width: 50%;
+  width: 48%;
   position: relative;
+  margin: 10px;
 }
 #photo-block #photo-block__img {
   width: 100%;
@@ -754,14 +783,17 @@ header {
   max-height: 495px;
   -o-object-fit: cover;
      object-fit: cover;
+  position: relative;
+  top: 0;
+  left: 0;
 }
-
 #photo-block #photo-block-survol {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 495px;
+  height: 100%;
+  max-height: 495px;
   background: rgba(0, 0, 0, 0.6);
   color: white;
   display: flex;
