--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -327,7 +327,7 @@ header {
     align-items: center;
     position: relative;
     width: 100%;
-    height: 160vh;
+    height: 140vh;
     img {
         position: absolute;
         top: 0;
@@ -419,15 +419,44 @@ header {
 
 
 /*** FRONT-PAGE ***/
-.photos-gallery {
+.section-gallery {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    max-width: 1148px;
-    height: auto;
+    margin-top: 60px;
+    margin-bottom: 90px;
+    .photos-gallery {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+    .load_more {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 8px 15px;
+        position: absolute;
+        width: 272px;
+        height: 50px;
+        left: 614px;
+        top: 3104px;
+        background: $button-background-color;
+        box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
+        border-radius: 2px;
+        cursor: pointer;
+        border: none;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    .load_more:hover {
+        background-color: #000000;
+        color: white;
+    }
 }
 
 
@@ -715,7 +744,6 @@ header {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            flex-wrap: wrap;
             position: relative;
             top: 50%;
             left: 0.5%;
@@ -806,23 +834,25 @@ header {
 
 /*** TEMPLATE PHOTO_BLOCK ***/
 #photo-block {
-    width: 50%;
+    width: 48%;
     position: relative;
-        #photo-block__img {
+    margin: 10px;
+    #photo-block__img {
         width: 100%;
         height: 100%;
         max-height: 495px;
         object-fit: cover;
-        }
-}
-
-#photo-block {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
     #photo-block-survol {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 495px;
+        height: 100%;
+        max-height: 495px;
         background: rgba(0, 0, 0, 0.6);
         color: white;
         display: flex;
