--- a/sass/theme.css
+++ b/sass/theme.css
@@ -371,7 +371,7 @@ header {
   justify-content: center;
   align-items: center;
   margin-top: 60px;
-  margin-bottom: 90px;
+  margin-bottom: 60px;
 }
 .section-gallery .photos-gallery {
   display: flex;
@@ -388,11 +388,9 @@ header {
   justify-content: center;
   align-items: center;
   padding: 8px 15px;
-  position: absolute;
+  position: relative;
   width: 272px;
   height: 50px;
-  left: 614px;
-  top: 3104px;
   background: #D8D8D8;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
   border-radius: 2px;
@@ -779,8 +777,7 @@ header {
 }
 #photo-block #photo-block__img {
   width: 100%;
-  height: 100%;
-  max-height: 495px;
+  height: 495px;
   -o-object-fit: cover;
      object-fit: cover;
   position: relative;
@@ -792,8 +789,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  max-height: 495px;
+  height: 495px;
   background: rgba(0, 0, 0, 0.6);
   color: white;
   display: flex;
