--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -425,7 +425,7 @@ header {
     justify-content: center;
     align-items: center;
     margin-top: 60px;
-    margin-bottom: 90px;
+    margin-bottom: 60px;
     .photos-gallery {
         display: flex;
         flex-direction: row;
@@ -441,11 +441,9 @@ header {
         justify-content: center;
         align-items: center;
         padding: 8px 15px;
-        position: absolute;
+        position: relative;
         width: 272px;
         height: 50px;
-        left: 614px;
-        top: 3104px;
         background: $button-background-color;
         box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
         border-radius: 2px;
@@ -839,8 +837,7 @@ header {
     margin: 10px;
     #photo-block__img {
         width: 100%;
-        height: 100%;
-        max-height: 495px;
+        height: 495px;
         object-fit: cover;
         position: relative;
         top: 0;
@@ -851,8 +848,7 @@ header {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
-        max-height: 495px;
+        height: 495px;
         background: rgba(0, 0, 0, 0.6);
         color: white;
         display: flex;
