--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -59,6 +59,14 @@ body {
     right: 0;
 }
 
+#main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 #page {
     width: 100%;
     height: auto;
@@ -419,12 +427,94 @@ header {
 
 
 /*** FRONT-PAGE ***/
+.section-filter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    .filter-form {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 1180px;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        margin: 0 auto;
+        .filter-group-1 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 76%;
+        }
+        .filter-group-2 {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            width: 100%;
+        }
+    }
+}
+
+.section-filter .filter-form .filter-group {
+    select {
+        position: relative;
+        width: 100%;
+        padding: 10px;
+        border: 1px solid $border-color;
+        border-radius: 8px;
+        background: url('data:image/svg+xml;charset=US-ASCII,%3csvg xmlns%3d%27http%3a//www.w3.org/2000/svg%27 viewBox%3d%270 0 24 24%27 fill%3d%27none%27 stroke%3d%27currentColor%27 stroke-width%3d%272%27 stroke-linecap%3d%27round%27 stroke-linejoin%3d%27round%27%3e%3cpolyline points%3d%276 9 12 15 18 9%27/%3e%3c/svg%3e') no-repeat right 10px center;
+        background-size: 16px 16px;
+        }
+    span {
+        width: 260px !important;
+        height: 43px !important;
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+.select2-container {
+    width: 100% !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__placeholder {
+    display: flex !important;
+    align-items: center !important;
+    font-family: 'Poppins' !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    font-size: 12px !important;
+    line-height: 18px !important;
+    letter-spacing: 0.03em !important;
+    text-transform: uppercase !important;
+    width: 78px !important;
+    height: 18px !important;
+    color: $modale-text-color !important;
+}
+
+.section-filter .filter-form .filter-group :hover {
+    border: 1.3px solid #215AFF;
+    border-radius: 8px;
+}
+
+
+/*** GALLERY PHOTOS ***/
 .section-gallery {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
     margin-bottom: 60px;
     .photos-gallery {
         display: flex;
@@ -432,6 +522,8 @@ header {
         flex-wrap: wrap;
         width: 100%;
         max-width: 1200px;
+        justify-content: center;
+        align-items: center;
         margin: 0 auto;
         padding: 20px;
     }
@@ -856,7 +948,7 @@ header {
         align-items: center;
         flex-direction: column;
         opacity: 0;
-        transition: opacity 0.3s ease;
+        transition: opacity 0.4s ease;
         #photo_icon_fullscreen {
             position: absolute;
             top: 10px;
