--- a/sass/theme.css
+++ b/sass/theme.css
@@ -30,6 +30,7 @@ body {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -47,13 +48,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
 
 #page {
-  width: 100%;
   height: auto;
   margin: 0 auto;
+  width: 100%;
 }
 
 .current-menu-item a {
@@ -291,7 +291,7 @@ header {
   align-items: center;
   position: relative;
   width: 100%;
-  height: 140vh;
+  height: 120vh;
 }
 .banner img {
   position: absolute;
@@ -378,7 +378,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 70%;
+  margin: 0 auto;
 }
 .section-filter .filter-form {
   display: flex;
@@ -388,68 +389,117 @@ header {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  margin: 0 auto;
+  margin: 0 20px;
 }
 .section-filter .filter-form .filter-group-1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 76%;
+  width: 50%;
 }
 .section-filter .filter-form .filter-group-2 {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 100%;
+  width: 50%;
 }
 
-.section-filter .filter-form .filter-group select {
+.dropdown {
   position: relative;
-  width: 100%;
-  padding: 10px;
+  display: inline-block;
+  width: 260px;
+  height: 43px;
+  border-radius: 8px;
+}
+.dropdown .dropdown__options-filter {
+  display: flex;
+  justify-content: space-between;
+  padding: 14px 22px 12px 12px;
   border: 1px solid #B8B8C2;
   border-radius: 8px;
-  background: url("data:image/svg+xml;charset=US-ASCII,%3csvg xmlns%3d%27http%3a//www.w3.org/2000/svg%27 viewBox%3d%270 0 24 24%27 fill%3d%27none%27 stroke%3d%27currentColor%27 stroke-width%3d%272%27 stroke-linecap%3d%27round%27 stroke-linejoin%3d%27round%27%3e%3cpolyline points%3d%276 9 12 15 18 9%27/%3e%3c/svg%3e") no-repeat right 10px center;
-  background-size: 16px 16px;
+  cursor: pointer;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #313144;
 }
-.section-filter .filter-form .filter-group span {
-  width: 260px !important;
-  height: 43px !important;
-}
-
-.visually-hidden {
+.dropdown .dropdown__arrow {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  top: 48%;
+  right: 14px;
+  transform: translateY(-50%) rotate(45deg);
+  width: 9px;
+  height: 9px;
+  border-right: 2px solid #333;
+  border-bottom: 2px solid #333;
+  transition: transform 0.4s ease;
+}
+.dropdown .dropdown__filter {
+  display: none;
+  position: absolute;
+  background-color: white;
+  border: 1px solid #B8B8C2;
+  border-radius: 0px 0px 8px 8px;
   padding: 0;
+  margin: 0;
+  width: 260px;
+  z-index: 1;
+  opacity: 0;
+  height: auto;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
+  transition: opacity 0.3s ease, height 0.3s ease;
+  top: calc(100% - 1px);
+  left: 0;
+}
+.dropdown .dropdown__filter > li {
+  list-style-type: none;
 }
 
-.select2-container {
-  width: 100% !important;
+.dropdown__switch:checked + .dropdown__options-filter {
+  border-bottom: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__placeholder {
-  display: flex !important;
-  align-items: center !important;
-  font-family: "Poppins" !important;
-  font-style: normal !important;
-  font-weight: 500 !important;
-  font-size: 12px !important;
-  line-height: 18px !important;
-  letter-spacing: 0.03em !important;
-  text-transform: uppercase !important;
-  width: 78px !important;
-  height: 18px !important;
-  color: #313144 !important;
+.dropdown__switch:checked + .dropdown__options-filter .dropdown__arrow {
+  transform: rotate(225deg);
 }
 
-.section-filter .filter-form .filter-group :hover {
-  border: 1.3px solid #215AFF;
-  border-radius: 8px;
+.dropdown__switch:checked + .dropdown__options-filter .dropdown__filter {
+  display: block;
+  opacity: 1;
+  transform: height;
+  top: 100%;
+  right: 0;
+  left: 0;
+  border-top: none;
+}
+
+.dropdown__select-option {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 4px 4px 4px 12px;
+  width: 242px;
+  height: 42px;
+  text-transform: none;
+  color: #313144;
+  letter-spacing: 0.03em;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.dropdown__select-option:hover {
+  background-color: #FFD6D6;
+  width: 242px;
+  height: 42px;
 }
 
 /*** GALLERY PHOTOS ***/
@@ -459,17 +509,16 @@ header {
   justify-content: center;
   align-items: center;
   margin-bottom: 60px;
+  width: 70%;
 }
 .section-gallery .photos-gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  max-width: 1200px;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  padding: 20px;
 }
 .section-gallery .load_more {
   display: flex;
