--- a/sass/theme.css
+++ b/sass/theme.css
@@ -379,7 +379,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 70%;
-  margin: 0 auto;
+  margin: 50px 0 10px 0;
 }
 .section-filter .filter-form {
   display: flex;
@@ -436,7 +436,7 @@ header {
   height: 9px;
   border-right: 2px solid #333;
   border-bottom: 2px solid #333;
-  transition: transform 0.4s ease;
+  transition: transform ease-in 0.4s;
 }
 .dropdown .dropdown__filter {
   display: none;
@@ -457,6 +457,28 @@ header {
 }
 .dropdown .dropdown__filter > li {
   list-style-type: none;
+}
+.dropdown .dropdown__filter .dropdown__select-option {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 4px 4px 4px 12px;
+  width: 243px;
+  height: 42px;
+  text-transform: none;
+  color: #313144;
+  letter-spacing: 0.03em;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.dropdown__select-option:hover {
+  background-color: #FFD6D6;
+  width: 242px;
+  height: 42px;
 }
 
 .dropdown__switch:checked + .dropdown__options-filter {
@@ -479,27 +501,9 @@ header {
   border-top: none;
 }
 
-.dropdown__select-option {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  padding: 4px 4px 4px 12px;
-  width: 242px;
-  height: 42px;
-  text-transform: none;
-  color: #313144;
-  letter-spacing: 0.03em;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 18px;
-}
-
-.dropdown__select-option:hover {
-  background-color: #FFD6D6;
-  width: 242px;
-  height: 42px;
+.dropdown__select-option.selected {
+  background-color: #E00000;
+  color: white !important;
 }
 
 /*** GALLERY PHOTOS ***/
@@ -508,7 +512,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   width: 70%;
 }
 .section-gallery .photos-gallery {
@@ -529,6 +533,7 @@ header {
   position: relative;
   width: 272px;
   height: 50px;
+  margin-top: 20px;
   background: #D8D8D8;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
   border-radius: 2px;
