--- a/sass/theme.css
+++ b/sass/theme.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*** GOOGLE FONTS ***/
 @font-face {
   font-family: "Space Mono BoldItalic";
@@ -44,7 +43,7 @@ body {
   right: 0;
 }
 
-#main {
+#home-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1020,17 +1019,46 @@ header {
   }
 }
 /*** LIGHTBOX ***/
-.lightbox {
-  display: none; /* cachée par défaut */
-  position: fixed; /* fixée et qui prend tout l'écran */
-  z-index: 1000; /* Pour être sûr de passer au dessus du reste */
+.lightbox-overlay {
+  display: none;
+  position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.7); /* noire avec transparence */
-  background-size: contain; /* l'image occupe tout l'espace disponible */
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer; /* Le curseur a la même forme que sur un lien */
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.lightbox-overlay.open {
+  display: flex;
+}
+
+.lightbox_container {
+  position: relative;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.lightbox_image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.close_lightbox {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.lightbox_arrows img {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
 }/*# sourceMappingURL=theme.css.map */
