--- a/sass/theme.css
+++ b/sass/theme.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*** GOOGLE FONTS ***/
 @font-face {
   font-family: "Space Mono BoldItalic";
@@ -24,14 +25,8 @@
 }
 
 body {
-  width: 100%;
-  height: auto;
-  margin: 0;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 #wpadminbar {
@@ -43,21 +38,17 @@ body {
   right: 0;
 }
 
-#home-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#page {
-  height: auto;
-  margin: 0 auto;
-  width: 100%;
-}
-
 .current-menu-item a {
   font-weight: bold;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 > p {
+  display: flex;
+  text-align: justify;
 }
 
 /*** HEADER ***/
@@ -67,6 +58,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
 
 #header_site_menu {
@@ -77,10 +69,12 @@ header {
 .navbar {
   display: flex;
   flex-direction: row;
-  width: 85%;
+  width: 100%;
+  max-width: 1250px;
   height: 80px;
   justify-content: space-between;
   align-items: center;
+  margin: 0 2% 0 2%;
 }
 
 .logo img {
@@ -89,8 +83,10 @@ header {
 }
 
 #header_menu {
-  width: 100vw;
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
 }
 
 #openBtn,
@@ -125,7 +121,7 @@ header {
   color: black;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 600px) {
   #menu-header {
     gap: 30px;
     font-size: calc(0.5rem + 1vw);
@@ -373,18 +369,25 @@ header {
   }
 }
 /*** FRONT-PAGE ***/
+.page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .section-filter {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 100%;
   margin: 40px 0 10px 0;
 }
 .section-filter .filter-form {
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  width: 70%;
   max-width: 1180px;
   justify-content: center;
   align-items: center;
@@ -393,6 +396,7 @@ header {
 }
 .section-filter .filter-form .filter-group-1 {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 50%;
@@ -504,6 +508,22 @@ header {
   color: white !important;
 }
 
+@media (max-width: 1115px) {
+  .section-filter .filter-form .filter-group-1 {
+    flex-direction: column;
+    gap: 12px;
+    width: auto;
+  }
+}
+@media (max-width: 750px) {
+  .section-filter .filter-form {
+    flex-direction: column;
+  }
+  .section-filter .filter-form .filter-group-2 {
+    margin-top: 12px;
+    width: auto;
+  }
+}
 /*** GALLERY PHOTOS ***/
 .section-gallery {
   display: flex;
@@ -511,15 +531,14 @@ header {
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
-  width: 70%;
+  width: 100%;
 }
 .section-gallery .photos-gallery {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
+  width: 72%;
+  justify-content: space-between;
+  align-items: flex-start;
   margin: 0 auto;
 }
 .section-gallery .load_more {
@@ -913,8 +932,11 @@ header {
 /*** TEMPLATE PHOTO_BLOCK ***/
 #photo-block {
   width: 48%;
+  height: 495px;
   position: relative;
   margin: 10px;
+  flex: 1 1 calc(48% - 16px); /* Ajuster la taille des éléments pour occuper environ 48% de la largeur disponible moins la moitié de l'écart */
+  min-width: 300px; /* Définir une largeur minimale pour les éléments */
 }
 #photo-block #photo-block__img {
   width: 100%;
@@ -1010,12 +1032,12 @@ header {
   #photo-block #photo-block__img {
     width: 100%;
     height: 100%;
-    max-height: 400px;
+    max-height: 500px;
   }
   #photo-block #photo-block-survol {
     width: 100%;
     height: 100%;
-    max-height: 400px;
+    max-height: 500px;
   }
 }
 /*** LIGHTBOX ***/
