--- a/sass/theme.css
+++ b/sass/theme.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*** GOOGLE FONTS ***/
 @font-face {
   font-family: "Space Mono BoldItalic";
@@ -25,14 +24,16 @@
 }
 
 body {
-  max-width: 1440px;
+  width: 100%;
   margin: 0 auto;
 }
 
 #wpadminbar {
   position: fixed;
   width: 100%;
-  z-index: 9999;
+  z-index: 8999;
+  max-height: 32px;
+  font-size: calc(0.5rem + 1vw);
   top: 0;
   left: 0;
   right: 0;
@@ -59,10 +60,14 @@ header {
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  background-color: #FFFFFF;
+  position: fixed;
+  left: 0;
+  top: 30px;
+  z-index: 9000;
 }
 
 #header_site_menu {
-  width: 100%;
   box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -86,7 +91,6 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 100%;
 }
 
 #openBtn,
@@ -102,7 +106,6 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  width: 100%;
   gap: 50px;
   font-size: 16px;
   padding-left: 0px;
@@ -202,10 +205,10 @@ header {
   #menu-header {
     display: flex;
     position: fixed;
-    z-index: 2;
+    z-index: 9999;
     top: 60px;
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     left: 0;
     flex-direction: column;
     align-items: center;
@@ -226,7 +229,12 @@ header {
   width: 100%;
   height: 40px;
   margin: 0 auto;
+  background-color: #FFFFFF;
   border-top: 1px black solid;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 9000;
 }
 .footer_site_menu .menu {
   box-shadow: none !important;
@@ -252,18 +260,25 @@ header {
   color: #000000;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 520px) {
   #menu-footer {
-    font-size: calc(0.3rem + 1.4vw);
+    gap: 30px;
+    font-size: calc(0.5rem + 1vw);
+  }
+}
+@media (max-width: 400px) {
+  #menu-footer {
+    gap: 20px;
   }
 }
 @media (max-width: 375px) {
   .footer_site_menu {
-    height: 200px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
   #menu-footer {
     display: flex;
@@ -274,10 +289,13 @@ header {
     padding: 0;
   }
   #menu-footer > li {
-    padding-bottom: 25px;
+    padding-bottom: 15px;
   }
   #menu-footer #menu-item-52 {
     padding-bottom: 0px;
+  }
+  #menu-footer #menu-item-54 {
+    padding-top: 10px;
   }
 }
 /*** BANNER ***/
@@ -369,12 +387,11 @@ header {
   }
 }
 /*** FRONT-PAGE ***/
-.page-container {
+.page-home {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
 }
 
 .section-filter {
@@ -383,12 +400,11 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 40px 0 10px 0;
+  margin: 30px 0 20px 0;
 }
 .section-filter .filter-form {
   display: flex;
   width: 70%;
-  max-width: 1180px;
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -530,16 +546,16 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 100px;
   width: 100%;
 }
 .section-gallery .photos-gallery {
   display: flex;
   flex-wrap: wrap;
-  width: 72%;
-  justify-content: space-between;
-  align-items: flex-start;
+  width: 74%;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 .section-gallery .load_more {
   display: flex;
@@ -690,6 +706,10 @@ header {
 }
 
 /*** SINGLE-PHOTOS ***/
+.page-container {
+  display: flex;
+}
+
 .single-photos {
   width: 100%;
   max-width: 1250px;
@@ -701,6 +721,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   margin-bottom: 100px;
+  margin-top: 60px;
 }
 .single-photos .single-photos-part-one {
   width: 100%;
@@ -848,7 +869,6 @@ header {
   flex-direction: row;
   justify-content: space-between;
   position: relative;
-  top: 50%;
   left: 0.5%;
   width: 100%;
   height: 500px;
@@ -901,9 +921,18 @@ header {
     width: 100%;
     height: auto;
     left: 0;
+    padding-bottom: 10px;
+  }
+}
+@media (max-width: 700px) {
+  .single-photos {
+    margin-bottom: 60px;
   }
 }
 @media (max-width: 375px) {
+  .single-photos {
+    margin-bottom: 30px;
+  }
   .single-photos .single-photos-part-two {
     width: 100%;
     padding: 10px 0px;
@@ -935,8 +964,9 @@ header {
   height: 495px;
   position: relative;
   margin: 10px;
-  flex: 1 1 calc(48% - 16px); /* Ajuster la taille des éléments pour occuper environ 48% de la largeur disponible moins la moitié de l'écart */
-  min-width: 300px; /* Définir une largeur minimale pour les éléments */
+  flex: 1 1 calc(48% - 16px);
+  max-width: 500px;
+  min-width: 48%;
 }
 #photo-block #photo-block__img {
   width: 100%;
@@ -1031,13 +1061,29 @@ header {
   }
   #photo-block #photo-block__img {
     width: 100%;
-    height: 100%;
+    height: auto;
     max-height: 500px;
   }
   #photo-block #photo-block-survol {
     width: 100%;
-    height: 100%;
+    height: auto;
     max-height: 500px;
+  }
+}
+@media (max-width: 650px) {
+  #photo-block {
+    margin: 0px 6px;
+  }
+  #photo-block #photo-block__img {
+    height: auto;
+    max-height: 465px;
+  }
+  #photo-block {
+    margin: 0px 6px;
+  }
+  #photo-block #photo-block-survol {
+    height: auto;
+    max-height: 465px;
   }
 }
 /*** LIGHTBOX ***/
