--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -1075,6 +1075,9 @@ header {
         flex-direction: column;
         opacity: 0;
         transition: opacity 0.5s ease;
+        &:hover {
+            opacity: 1;
+        }
         #photo_icon_fullscreen {
             position: absolute;
             top: 10px;
@@ -1245,7 +1248,7 @@ header {
 }
 
 /*** LIGHTBOX ***/
-.lightbox-overlay {
+#lightbox-overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -1255,59 +1258,176 @@ header {
     background: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
-    z-index: 2;
-}
-
-.lightbox-overlay.active {
-    display: flex;
-}
-
-.lightbox_container {
-    position: relative;
-    max-width: 100%;
-    max-height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .close_lightbox {
-        position: absolute;
-        top: 10%;
-        right: -8%;
-        cursor: pointer;
-        color: white;
-        transform: rotate(0);
-        transition: transform 500ms;
-    }
-    .lightbox_photo_container {
+    z-index: 9999;
+    #lightbox-content {
+        position: relative;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        max-width: 100%;
-        max-height: 100%;
-        .lightbox_image {
-            max-width: 80%;
-            max-height: 1024px;
-            object-fit: contain;
+        text-align: center;
+        height: 100%;
+        .close_lightbox {
+            position: absolute;
+            top: 20px;
+            right: -60px;
+            cursor: pointer;
+            > img {
+                filter: brightness(0) invert(1);
+                transition: transform 0.6s ease;
+            }
+            > img:hover {
+                transform: rotate(180deg);
+            }
+        }
+        .lightbox-container {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #lightbox-img {
+                max-width: 90vw;
+                max-height: 90vh;
+                object-fit: contain;
+            }
+            .lightbox-arrows {
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                pointer-events: none;
+                width: calc(100% - 70px);
+                max-width: 90vw;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .lightbox_arrow_prev,
+                .lightbox_arrow_next {
+                    cursor: pointer;
+                    filter: brightness(0) invert(1);
+                    transition: filter 0.3s ease, transform 0.3s ease;
+                    pointer-events: auto;
+                    z-index: 100;
+                    position: absolute;
+                    transform: translateY(-50%);
+                    height: 18px; /* Hauteur fixe des flèches */
+                    width: 100px; /* Largeur fixe des flèches */
+                    &:hover {
+                        filter: brightness(0.8) invert(1);
+                        transform: scale(1.2) translateY(-50%);
+                    }
+                }
+
+                .lightbox_arrow_prev {
+                    left: 0; /* Ajustement à gauche */
+                }
+
+                .lightbox_arrow_next {
+                    right: 0; /* Ajustement à droite */
+                }
+            }
+        }
+
+        #lightbox-details {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 0.9em;
+            line-height: 1.5em;
+            text-transform: uppercase;
+            color: #FFFFFF;
+
+            .photo_details_left,
+            .photo_details_right {
+                display: flex;
+                width: 50%;
+            }
+
+            .photo_details_left {
+                display: flex;
+                justify-content: flex-start;
+            }
+
+            .photo_details_right {
+                display: flex;
+                justify-content: flex-end;
+            }
         }
     }
-    .lightbox_arrows {
-        position: absolute;
-        top: 50%;
-        height: 18px;
-        width: 200px;
-        cursor: pointer;
-        color: white;
-        font-family: 'Space Mono';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 18px;
-        .lightbox_arrow_previous {
-            left: -20% !important;
-            width: 200px;
-        }
-        .lightbox_arrow_next {
-            right: -22%;
+
+    &.landscape {
+        .lightbox-arrows {
+            .lightbox_arrow_prev {
+                left: -22% !important; /* Ajustement à gauche pour paysage */
+            }
+            .lightbox_arrow_next {
+                right: -22% !important; /* Ajustement à droite pour paysage */
+            }
         }
     }
+
+    &.portrait {
+        .lightbox-arrows {
+            .lightbox_arrow_prev {
+                left: -55% !important; /* Ajustement à gauche pour portrait */
+            }
+            .lightbox_arrow_next {
+                right: -55% !important; /* Ajustement à droite pour portrait */
+            }
+        }
+    }
+}
+
+@media (max-width: 840px) {
+    #lightbox-overlay #lightbox-content {
+    &.landscape {
+        .lightbox-arrows {
+            .lightbox_arrow_prev {
+                left: -12% !important; /* Ajustement à gauche pour paysage */
+            }
+            .lightbox_arrow_next {
+                right: -12% !important; /* Ajustement à droite pour paysage */
+            }
+        }
+    }
+    &.portrait {
+        .lightbox-arrows {
+            .lightbox_arrow_prev {
+                left: -45% !important; /* Ajustement à gauche pour portrait */
+            }
+            .lightbox_arrow_next {
+                right: -45% !important; /* Ajustement à droite pour portrait */
+            }
+        }
+    }
+}
+
+@media (max-width: 470px) {
+    #lightbox-overlay #lightbox-content {
+    &.landscape {
+        .lightbox-arrows {
+            .lightbox_arrow_prev {
+                left: -6% !important; /* Ajustement à gauche pour paysage */
+            }
+            .lightbox_arrow_next {
+                right: -6% !important; /* Ajustement à droite pour paysage */
+            }
+        }
+    }
+    &.portrait {
+        .lightbox-arrows {
+            .lightbox_arrow_prev {
+                left: -10% !important; /* Ajustement à gauche pour portrait */
+            }
+            .lightbox_arrow_next {
+                right: -10% !important; /* Ajustement à droite pour portrait */
+            }
+        }
+    }
+    }
+}
+
 }
